# radio-problem

./: LICENSE  README.md  input.txt  radio-problem.cabal  test_input.txt  test_options.txt
docs/: rpz.tex
scripts/: DefaultFitness.hs  Input.hs  InvalidFitness1.hs  InvalidFitness2.hs  Options.hs
src/: Generator.hs  Genetic.hs  Graphics.hs  Main.hs  Parsing.hs  Task.hs
src/generator/: Main.hs
src/solver/: Args.hs  Genetic.hs  Graphics.hs  Main.hs  Parsing.hs  Plugin.hs  Task.hs
src/solver/Graphics/: Plot.hs  Solution.hs
