name:           radio-problem
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ncrashed

executable radio-problem
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   repa >=3.2.5 && <3.3,
                   parsec >=3.1.7 && <3.2,
                   vector >=0.10.11 && <0.11,
                   MonadRandom >=0.3 && <0.4,
                   gloss >=1.8.2 && <1.9,
                   transformers >=0.4.1 && <0.5,
                   async >=2.0.1 && <2.1,
                   stm >=2.4.3 && <2.5
  ghc-options:     -Wall -threaded
  hs-source-dirs:  src/solver

executable radio-problem-generator
  build-depends:   
                   base >= 4,
                   optparse-applicative >=0.11.0 && <0.12,
                   transformers >=0.4.1 && <0.5,
                   stm >=2.4.3 && <2.5
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  hs-source-dirs:  src/generator

