name:           radio-problem
version:        1.1.0
cabal-version:  >= 1.2
build-type:     Simple
author:         ncrashed
copyright:      Copyright © 2014 Gushcha Anton
license:        MIT
license-file:   LICENSE
stability:      Experimental
maintainer:     ncrashed@gmail.com
homepage:       https://github.com/ncrashed/radio-problem
synopsis:       Genetic algorithm for solving radio problem
description:    
                Demonstration of genetic algorithm approach for solving complex optimization problems. The application solves problem: "There are n 
                possible places for radio towers. What is minimal count of radio towers to be placed to achieve maximum coverage of network?".
                Application uses three pointed crossover operator, bit-string representation of solution, classic mutation and elite solution saving. Also 
                the search process and result solution are visualized via Gloss package.
category:       Math
data-files:     
                scripts/DefaultFitness.hs, 
                scripts/Input.hs, 
                scripts/InvalidFitness1.hs, 
                scripts/InvalidFitness2.hs, 
                scripts/Options.hs

executable radio-problem
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   repa >=3.2.5 && <3.3,
                   vector >=0.10.11 && <0.11,
                   MonadRandom >=0.3 && <0.4,
                   gloss >=1.8.2 && <1.9,
                   transformers >=0.3.0 && <0.5,
                   async >=2.0.1 && <2.1,
                   stm >=2.4.3 && <2.5,
                   hint >=0.4.2 && <0.5,
                   encoding >= 0.7 && < 0.8
  ghc-options:     -Wall -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
  hs-source-dirs:  src/solver

executable radio-problem-generator
  build-depends:   
                   base >= 4,
                   optparse-applicative >=0.11.0 && <0.12,
                   transformers >=0.3.0 && <0.5,
                   stm >=2.4.3 && <2.5,
                   encoding >= 0.7 && < 0.8
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  hs-source-dirs:  src/generator

